--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "express-smartjava",
-  "description": "Smartjava Express App",
+  "name": "application-name",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
-    "express": "3.x"
+    "express": "3.18.2",
+    "jade": "*",
+    "mongodb": ">= 0.9.6-7",
+    "mongoose": ">= 3.8.19"
   }
 }
