use cors library

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "*",
     "mocha": "*",
     "superagent": "*",
-    "expect.js": "*"
+    "expect.js": "*",
+    "cors": "*"
   }
 }
