--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node app.js"
   },
+  "repository": {
+    "private": true
+  },
   "dependencies": {
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
