--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "*",
     "connect-multiparty": "*",
     "mongoose-random": "*",
-    "ioredis": "*"
+    "ioredis": "*",
+    "bunyan": "*"
   }
 }
