--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
+mongo:
+  image: mongo
+  ports:
+    - "27017:27017"
 web:
   build: .
   command: node /src/app.js
   ports:
     - "8080:8080"
   links:
-    - db
-db:
-  image: mongo
+    - mongo
