reactivate log + update dockercompose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,10 @@ mongo:
   image: mongo
   ports:
     - "27017:27017"
+redis:
+  image: redis
+  ports:
+    - "6379:6379"
 web:
   build: .
   command: node /src/app.js
@@ -9,3 +13,4 @@ web:
     - "8080:8080"
   links:
     - mongo
+    - redis
