reset password in account

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "connect-multiparty": "*",
     "mongoose-random": "*",
     "ioredis": "*",
-    "bunyan": "*"
+    "bunyan": "*",
+    "haml": "*",
+    "nodemailer": "*",
+    "nodemailer-smtp-transport": "*"
   }
 }
